add dropdown edit on place page

--- a/Admin/templates/Admin/Place.html
+++ b/Admin/templates/Admin/Place.html
@@ -12,9 +12,13 @@
                 <td>District</td>
                 <td>
                     <select name="sel_district" id="">
-                        <option value="">...Select...</option>
+                        <option value="">Select</option>
                         {% for i in district %}
-                        <option value="{{i.id}}">{{i.district_name}}</option>
+                        <option 
+                        {% if i.id == editPlace.district_id %}
+                        selected
+                        {% endif %}
+                        value="{{i.id}}">{{i.district_name}}</option>
                         {% endfor %}
                     </select>
                 </td>
