implement ajax for userRegistration page

--- a/Guest/templates/Guest/login.html
+++ b/Guest/templates/Guest/login.html
@@ -7,7 +7,7 @@
     <body>
         <h1 align="center">User Login</h1>
         <form method="POST">
-            
+
             {% csrf_token %}
             <table align="center" border="1"
             <tr>
@@ -19,6 +19,8 @@
             <tr>
                 <td colspan="2" align="center"><input type="submit" value="Login"></td>
             </tr>
+            </table>
 
         </form>
     </body>
+</html>
