--- a/Guest/templates/Guest/userRegistration.html
+++ b/Guest/templates/Guest/userRegistration.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1 align="center">User Registration</h1>
-    <form method="POST">
+    <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <table align="center" border="1">
             <tr>
